--- a/exercises-section-b/package.json
+++ b/exercises-section-b/package.json
@@ -8,17 +8,23 @@
     "calculateBmi": "ts-node bmiCalculator.ts",
     "calculateExercises": "ts-node exerciseCalculator.ts",
     "start": "ts-node index.ts",
-    "dev": "ts-node-dev index.ts"
+    "dev": "ts-node-dev index.ts",
+    "lint": "eslint ."
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "type": "commonjs",
   "devDependencies": {
+    "@eslint/js": "^8.57.1",
+    "@stylistic/eslint-plugin": "^1.8.1",
+    "@types/eslint__js": "^8.42.3",
     "@types/express": "^5.0.5",
+    "eslint": "^8.57.1",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.9.3"
+    "typescript": "^5.9.3",
+    "typescript-eslint": "^7.2.0"
   },
   "dependencies": {
     "express": "^4.21.2"
