--- a/flight-diaries/package.json
+++ b/flight-diaries/package.json
@@ -7,8 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "tsc": "tsc",
     "start": "node build/index.js",
-    "dev": "ts-node-dev index.ts",
-    "lint": "eslint ."
+    "dev": "ts-node-dev src/index.ts",
+    "lint": "eslint ./src"
   },
   "keywords": [],
   "author": "",
