--- a/flight-diaries/package.json
+++ b/flight-diaries/package.json
@@ -19,6 +19,7 @@
     "@stylistic/eslint-plugin": "^1.8.1",
     "@types/eslint__js": "^8.42.3",
     "@types/express": "^5.0.5",
+    "@types/uuid": "^10.0.0",
     "eslint": "^8.57.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.9.3",
@@ -28,6 +29,8 @@
     "@types/cors": "^2.8.19",
     "cors": "^2.8.5",
     "express": "^4.21.2",
-    "package": "^1.0.1"
+    "finnish-ssn": "^2.0.4",
+    "package": "^1.0.1",
+    "uuid": "^8.3.2"
   }
 }
