--- a/flight-diaries/package.json
+++ b/flight-diaries/package.json
@@ -31,6 +31,7 @@
     "express": "^4.21.2",
     "finnish-ssn": "^2.0.4",
     "package": "^1.0.1",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "zod": "^4.1.12"
   }
 }
